# sangfor-centralized-management-platform

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: audit.py  auth.py  security.py
backend/app/db/: base.py  init_db.py  models.py
backend/app/routers/: audit.py  customrules.py  deps.py  instances.py  policies.py  search.py  sync.py  urls.py
backend/app/sangfor/: api_client.py  customrule_cgi.py  org_cgi.py  policy_cgi.py  session_pool.py  url_cgi.py  web_base.py  web_client.py
backend/app/schemas/: analysis.py  common.py  instance.py  policy.py  search.py  sync.py  url.py
backend/app/services/: analysis_cache.py  compare_service.py  customrule_form.py  customrule_service.py  instance_service.py  merge_service.py  policy_relations.py  policy_service.py  policy_sync.py  policy_template.py  policy_usage_service.py  search_service.py  sync_service.py  url_service.py
backend/tests/: test_core.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
frontend/src/components/: app-picker.tsx  common.tsx  confirm-dialog.tsx  customrule-form.tsx  data-table.tsx  echarts-lite.tsx  faceted-filter.tsx  instance-switcher.tsx  layout.tsx  no-instance.tsx  policy-dialog.tsx  ref-chip.tsx  route-error.tsx  url-form.tsx  write-preview.tsx
frontend/src/hooks/: use-current-instance.ts
frontend/src/lib/: api.ts  chart-export.ts  customrule.ts  policy-refs.ts  types.ts
(+36 files in other folders)
