[project]
name = "sangfor-ac-manager"
version = "0.1.0"
description = "深信服 AC 上网行为管理统一管理系统 - 后端"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42.0",
    "requests>=2.31",
    "rsa>=4.9",
    "python-multipart>=0.0.9",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
